{\fonttbl\f0\fswiss\fcharset0 Helvetica;\f1\fswiss\fcharset0 ArialMT;}
{\colortbl;\red255\green255\blue255;}
\margl1440\margr1440\vieww15620\viewh11820\viewkind0
\pard\tx720\tx1440\tx2160\tx2880\tx3600\tx4320\tx5040\tx5760\tx6480\tx7200\tx7920\tx8640\ql\qnatural\pardirnatural

\f0\fs24 \cf0 ****************************\
iFeature Changelog\
\
****************************\
\
Version 1.1.5 (6-6-11)\
-Fixed broken menu item background for links beyond first row of navigation\
\
\
Version 1.1.4 (6-5-11)\
-Fixed post container bug related to custom backgrounds in search.php\
\
Version 1.1.3 (5-25-11)\
-Made SEO tags in header dependent on theme options settings.\
-Optimized style.css, removed outdated styles.\
-Removed legacy custom field options for iFeature slider options.\
-Removed title / alt tags from credit link.\
-Fixed issue where bullets and numbers on lists weren't displaying properly.\
-Updated doctype to HTML5.\
-Updated .ico support, including a default .ico.\
\
\
Version 1.1.2 (5-11-11)\
-Fixed menu CSS to eliminate dropdown blowout when loading certain pages.\
-Added WordPress background color / image support.\
-Revised CSS for posts and pages to have a post container with a white background.\
-Searchbar CSS fixes for IE.\
-Implemented PIE for rounded corners in IE7-8.\
-Removed alpha filter for social icons for IE7-8 due to rendering issue (hover no longer supported for IE7-8, IE9 and modern browsers are fine). \
\
Version 1.1.1 (5-4-11)\
-CSS fixes (iMenu).\
\
Version 1.1 (5-2-11)\
-CSS fixes (footer, comments).\
-Credit.php text revised.\
-Now using 
\f1 Meta-options instead of custom fields.\

\f0 \
\
Version 1.0.7\
-Fixed menu blowout issue, extra menu items now display below main navigation.\
-Set max image and caption width for post content to avoid blowout.\
-Removed hard-coded superfish script from header, now hooked from functions file.\
-moved wp_footer in footer.php above closing HTML body tag.\