@@ -10,11 +10,12 @@ iFeature Changelog\
 ****************************\
 \
 Version 1.1.5 (6-6-11)\
--Fixed broken menu item background for links beyond first row of navigation\
+-Fixed broken menu item background for links beyond first row of navigation.\
+-Featured images now link to corresponding post, fixed featured image alignment.\
 \
 \
 Version 1.1.4 (6-5-11)\
--Fixed post container bug related to custom backgrounds in search.php\
+-Fixed post container bug related to custom backgrounds in search.php.\
 \
 Version 1.1.3 (5-25-11)\
 -Made SEO tags in header dependent on theme options settings.\
